# deim-wrapper

./: .gitignore  .gitmodules  README.md  cfg_nano.yml  cfg_nano_v2.yml  cfg_small.yml  cfg_small_v2.yml  gradio_demo.py  live_inference.py  live_plot_metrics.py  plot_metrics.py  pyproject.toml
deim_outputs/deim_hgnetv2_n_coco/summary/: events.out.tfevents.1741237987.pop-os.768354.0
