[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
dependencies = []
name = "deim"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
deim = { path = ".", editable = true }

[tool.pixi.tasks]
