[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
dependencies = []
name = "deim-wrapper"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["deim_wrapper"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
deim-wrapper = { path = ".", editable = true }

torch = { version = "<=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = "<=0.20.1", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.tasks]
